[gd_scene load_steps=6 format=3 uid="uid://cn66fpxfkxo27"]

[ext_resource type="Script" path="res://lib/ui/deco_overlay/deco_overlay.gd" id="1_ddkjk"]
[ext_resource type="Texture2D" uid="uid://b0feucb0fmvyv" path="res://lib/ui/deco_overlay/tex/deco_frame.png" id="2_22byq"]
[ext_resource type="FontFile" uid="uid://bhk1jyryyb1be" path="res://generic/plex_mono.otf" id="3_5f4vs"]

[sub_resource type="Animation" id="Animation_isnqx"]
resource_name = "flicker"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DecoFrame:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.6, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0.156863), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3a815"]
_data = {
"flicker": SubResource("Animation_isnqx")
}

[node name="DecoOverlay" type="CanvasLayer"]
script = ExtResource("1_ddkjk")

[node name="DecoFrame" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_22byq")
expand_mode = 1

[node name="PrettyNumbers" type="RichTextLabel" parent="DecoFrame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.0
offset_top = 132.0
offset_right = 165.0
offset_bottom = 177.0
grow_horizontal = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_5f4vs")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[center]0000000000000000[/center]"

[node name="Flicker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3a815")
}

[node name="PrettyNumberUpdate" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="PrettyNumberUpdate" to="." method="_on_pretty_number_update_timeout"]
